# math-images-skill

./: .gitignore  README.md  SKILL.md  bootstrap.sh  install.md
.github/workflows/: release.yml
math2img/: Cargo.toml
math2img-tectonic/: Cargo.toml
math2img-tectonic/src/: extract.rs  main.rs  render.rs
math2img/src/: main.rs  parser.rs  render.rs
